# semantic2any

./: .gitignore  README.md  pyproject.toml
configs/: s2mel_dit.yaml  s2mel_dit_s2mel_train_data_random_split_bigvgan_v2_44khz_128band_512x.yaml  s2mel_zipformer.yaml  s2mel_zipformer_s2mel_train_data_filtered_speaker_pair_bigvgan_v2_44khz_128band_512x.yaml  s2mel_zipformer_s2mel_train_data_random_split_bigvgan_v2_44khz_128band_512x.yaml  s2mel_zipformer_vctk1000utt_20260709_e300_bs32_8gpu.yaml  s2mel_zipformer_vctk10pct_20260708_e30_bs32.yaml  s2mel_zipformer_vctk10pct_20260708_e5.yaml  s2mel_zipformer_vctk10pct_20260709_e30_bs32_8gpu.yaml  s2mel_zipformer_vctk900train100valid_20260709_e300_bs16_8gpu.yaml  s2mel_zipformer_vctk900train100valid_20260710_e100000_bs64_4gpu_l1.yaml  s2mel_zipformer_vctk900train100valid_20260710_e100000_bs64_4gpu_l2.yaml  s2mel_zipformer_vctk900train100valid_20260710_e10000_bs32_8gpu_l2.yaml  s2mel_zipformer_vctk900train100valid_bigvgan_v2_44khz_128band_256x_e10000_bs64_4gpu_l2.yaml  s2mel_zipformer_vctk900train100valid_bigvgan_v2_44khz_128band_512x_e10000_bs64_4gpu_l2.yaml  s2mel_zipformer_vctk_train_minus_test_10pct_bigvgan_v2_44khz_128band_256x_e350_bs32_4gpu_l2.yaml  s2mel_zipformer_vctk_train_minus_test_10pct_bigvgan_v2_44khz_128band_512x_e350_bs32_4gpu_l2.yaml
docs/: backbone-ablation.md  gcs-datasets.md  maskgct-code-precompute.md  model-assets.md  s2mel-train-data-sync.md  style-ablation.md
scripts/: infer_s2mel_zipformer.py  precompute_maskgct_codes.py  precompute_s2mel_features.py  render_paired_mel_comparisons.py  (+8 more)
(+68 files in other folders)
