[project]
name = "semantic2any"
version = "0.1.0"
description = "IndexTTS2.5-style semantic-to-mel flow matching training with a ZipFormer estimator."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate",
    "einops",
    "gcsfs",
    "huggingface-hub",
    "json5",
    "librosa",
    "matplotlib",
    "numpy<2.5",
    "omegaconf",
    "safetensors",
    "torch",
    "torchcodec",
    "torchaudio",
    "tqdm",
    "transformers==4.52.1",
    "wandb",
]

[project.scripts]
train-s2mel-zipformer = "trainers.train_s2mel_zipformer:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["semantic2any*", "trainers*"]
